Revert "fix: dialog overflow."
This reverts commit 9dfe11514a505f042657cd87a4256ed04a433234.

--- a/src/common/Dialog.css
+++ b/src/common/Dialog.css
@@ -13,7 +13,6 @@
     border-style: solid;
     text-align: center;
     border-color: #e6007a;
-    overflow: hidden;
 }
 
 .Dialog .modal-body {
